# scheduletf

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.yaml  deny.toml  diesel.toml  fly.toml
.github/workflows/: ci-cd.yaml
entities/: game.rs  mod.rs  prelude.rs  team_guild.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240918_184436_create_team_guild.rs  m20240918_185310_create_game.rs  m20250329_023624_add_lfs_div_column.rs
migrations/: 20240830193223_create_guilds_table.down.sql  20240830193223_create_guilds_table.up.sql  20240830193812_create_games_tables.down.sql  20240830193812_create_games_tables.up.sql  20240830193812_create_scrims_table.down.sql  20240830193812_create_scrims_table.up.sql
src/: autocomplete.rs  components.rs  config.rs  error.rs  lib.rs  main.rs  rgl.rs  serveme.rs  utils.rs
src/commands/: config.rs  mod.rs  refresh.rs
src/commands/config/: mod.rs
src/commands/game/: changelevel.rs  delete.rs  mod.rs  rcon.rs  show.rs
src/commands/match/: edit.rs  host.rs  join.rs  mod.rs
src/commands/official/: add.rs  mod.rs
src/commands/scrim/: cancel.rs  edit.rs  host.rs  join.rs  lfs.rs  mod.rs  refresh.rs  schedule.rs  show.rs
src/components/: mod.rs
src/entities/: game.rs  mod.rs  team_guild.rs
src/models/: game.rs  guild.rs  mod.rs
