[package]
name = "tf2-team-manager"

authors = ["Vidhan Bhatt <me@vidhan.io>"]
edition = "2021"
license = "MIT"
publish = false
version = "0.1.0"

[dependencies]
color-eyre = "0.6.3"
dotenvy = "0.15"
envy = "0.4.2"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serenity = { version = "0.12.2", default-features = false, features = [
    "builder",
    "cache",
    "client",
    "collector",
    "framework",
    "gateway",
    "http",
    "model",
    "rustls_backend",
    "standard_framework",
    "utils",
] }
serenity-commands = "0.4.3"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "time",
    "tls-rustls-ring",
] }
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["macros"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[lints]
    [lints.rust]
    missing_copy_implementations = "warn"
    missing_debug_implementations = "warn"
    # missing_docs = "warn"
    unsafe_code = "forbid"

    [lints.clippy]
    cast_possible_wrap = "allow"
    cast_sign_loss = "allow"

    missing_errors_doc = "allow"
    module_name_repetitions = "allow"

    # [allow(clippy::cast_precision_loss)]
    nursery = { level = "warn", priority = -1 }
    pedantic = { level = "warn", priority = -1 }
