[package]
name = "scrimmy"

authors = ["Vidhan Bhatt <me@vidhan.io>"]
edition = "2021"
license = "MIT"
publish = false
version = "0.1.0"

[dependencies]
color-eyre = "0.6"
dotenvy = "0.15"
envy = "0.4"
rand = "0.8.5"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12", default-features = false, features = [
    "builder",
    "cache",
    "client",
    "collector",
    "framework",
    "gateway",
    "http",
    "model",
    "rustls_backend",
    "standard_framework",
    "utils",
] }
serenity-commands = "0.5"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "time",
    "tls-rustls-ring",
] }
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tz-rs = "0.6"
tzdb = "0.6"

[lints]
    [lints.rust]
    missing_copy_implementations = "warn"
    missing_debug_implementations = "warn"
    # missing_docs = "warn"
    unsafe_code = "forbid"

    [lints.clippy]
    cast_possible_wrap = "allow"
    cast_sign_loss = "allow"

    missing_errors_doc = "allow"
    module_name_repetitions = "allow"

    # [allow(clippy::cast_precision_loss)]
    nursery = { level = "warn", priority = -1 }
    pedantic = { level = "warn", priority = -1 }
