[package]
name = "matchbox"

authors = ["Vidhan Bhatt <me@vidhan.io>"]
edition = "2024"
license = "MIT"
publish = false
version = "0.1.0"

[workspace]
members = [".", "migration"]


[dependencies]
migration = { path = "migration" }

color-eyre = "0.6"
dotenvy = "0.15"
envy = "0.4"
moka = { version = "0.12.10", features = ["future"] }
paste = "1"
rand = "0.9.0"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
scraper = { version = "0.23", features = ["atomic"] }
sea-orm = { version = "1", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12", default-features = false, features = [
    "builder",
    "cache",
    "client",
    "collector",
    "framework",
    "gateway",
    "http",
    "model",
    "rustls_backend",
    "standard_framework",
    "utils",
] }
serenity-commands = { version = "0.7", path = "../serenity-commands", features = [
    "time",
] }
sourcon = "0.1.0"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tz-rs = "0.7"
tzdb = "0.7.2"
regex = "1.11.1"

[lints]
    [lints.rust]
    missing_copy_implementations = "warn"
    missing_debug_implementations = "warn"
    # missing_docs = "warn"
    unsafe_code = "forbid"

    [lints.clippy]
    cast_possible_wrap = "allow"
    cast_sign_loss = "allow"

    missing_errors_doc = "allow"
    module_name_repetitions = "allow"

    nursery = { level = "warn", priority = -1 }
    pedantic = { level = "warn", priority = -1 }
